--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-io-2.4.jar-1=C:\\Users\\Pubudu Kasun\\Documents\\NetBeansProjects\\jspjar\\commons-io-2.4.jar
 file.reference.lombok.jar=C:\\Users\\Pubudu Kasun\\Documents\\NetBeansProjects\\jspjar\\lombok.jar
 file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\Pubudu Kasun\\Documents\\NetBeansProjects\\jspjar\\mysql-connector-java-5.1.49.jar
 includes=**
@@ -53,7 +54,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
-    ${file.reference.lombok.jar}
+    ${file.reference.lombok.jar}:\
+    ${file.reference.commons-io-2.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
